--- a/themes/moderntattoo/layouts/partials/head.html
+++ b/themes/moderntattoo/layouts/partials/head.html
@@ -7,7 +7,10 @@
 
     <!-- Bootstrap includes -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    
-    
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/512749d719.js" crossorigin="anonymous"></script>    
+
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,700|Montserrat&display=swap" rel="stylesheet">
 
