fixed png images being in the wrong format

--- a/themes/moderntattoo/layouts/partials/gallery.html
+++ b/themes/moderntattoo/layouts/partials/gallery.html
@@ -11,7 +11,7 @@
 <div id="gallery" class="gallery-content container-fluid">
     <div class="gallery">
         {{ range .Images }}
-            <img src="/images/gallery/{{.Name}}" alt="{{.Alt}}" width="100%" height="auto" class="gallery-img" />		
+            <img src="/images/gallery/{{.Name}}" alt="{{.Alt}}" class="gallery-img" />		
         {{ end }} 
     </div>
 </div>
