--- a/themes/moderntattoo/assets/sass/main.scss
+++ b/themes/moderntattoo/assets/sass/main.scss
@@ -187,13 +187,19 @@ h1, h2, h3 {
         place-content: center;
         text-align: center;
 
-        a {
+        @media screen and (max-width: 767px) {
+            font-size: 12px;
+            a div { margin: 0 .5em; }
+        }
+
+        a div {
+            display: inline;
             padding: .75em;
             background: #222;
             border-radius: 50%;
             font-size: 1.25em;
-            margin: 0 15px;
-            i { width: 25px; text-align: center; }
+            margin: 0 1em;
+            i { width: 1.25em; text-align: center; }
         }
     }
 
