--- a/themes/moderntattoo/layouts/partials/artists.html
+++ b/themes/moderntattoo/layouts/partials/artists.html
@@ -27,19 +27,19 @@
         <div class="row social-links">
             <div class="col-sm-12 col-md-8 offset-sm-0">
                 {{ if $artist.Website }}
-                <a class="artist-link" href="{{ .Website }}" target="_blank"><i class="fas fa-link"></i></a>
+                <a class="artist-link" href="{{ .Website }}" target="_blank"><div><i class="fas fa-link"></i></div></a>
                 {{ end }}
                 {{ if $artist.Instagram }}
-                <a class="artist-link" href="{{ .Instagram }}" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a class="artist-link" href="{{ .Instagram }}" target="_blank"><div><i class="fab fa-instagram"></i></div></a>
                 {{ end }}
                 {{ if $artist.Twitter }}
-                <a class="artist-link" href="{{ .Twitter }}" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a class="artist-link" href="{{ .Twitter }}" target="_blank"><div><i class="fab fa-twitter"></i></div></a>
                 {{ end }}
                 {{ if $artist.Facebook }}
-                <a class="artist-link" href="{{ .Facebook }}" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a class="artist-link" href="{{ .Facebook }}" target="_blank"><div><i class="fab fa-facebook-f"></i></div></a>
                 {{ end }}
                 {{ if $artist.Youtube }}
-                <a class="artist-link" href="{{ .Youtube }}" target="_blank"><i class="fab fa-youtube"></i></a>
+                <a class="artist-link" href="{{ .Youtube }}" target="_blank"><div><i class="fab fa-youtube"></i></div></a>
                 {{ end }}
             </div>
         </div>
