--- a/themes/moderntattoo/layouts/partials/footer.html
+++ b/themes/moderntattoo/layouts/partials/footer.html
@@ -1,3 +1,10 @@
 <div class="container-fluid footer">
-    <p style="color: #fff; text-align: center; padding-top: 30px;"> footer </p>
+    <div class="footer-content m-auto">
+        <h6 class="copyright">
+            © 2020 Behind The Scenez Tattooz 
+        </h6>
+        <div class="design-attribution m-auto"> 
+            <a href="https://ryanwise.me" target="_blank"> Design and development by Ryan Wise </a>
+        </div>
+    </div>
 </div>
