hugoize footer copyright

--- a/themes/moderntattoo/layouts/partials/footer.html
+++ b/themes/moderntattoo/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <div class="container-fluid footer">
     <div class="footer-content m-auto">
         <h6 class="copyright">
-            © 2020 Behind The Scenez Tattooz 
+            {{ .Site.Copyright }}
         </h6>
         <div class="design-attribution m-auto"> 
             <a href="https://ryanwise.me" target="_blank"> Design and development by Ryan Wise </a>
