something to do witha  footer

--- a/themes/moderntattoo/layouts/partials/footer.html
+++ b/themes/moderntattoo/layouts/partials/footer.html
@@ -4,7 +4,7 @@
             {{ .Site.Copyright }}
         </h6>
         <div class="design-attribution m-auto"> 
-            <a href="https://ryanwise.me" target="_blank"> Design and development by Ryan Wise </a>
+            <a href="https://ryanwise.me" target="_blank"> Design and development By Ryan Wise </a>
         </div>
     </div>
 </div>
