facebook for britta, changed artist links to open in new tab

--- a/themes/moderntattoo/layouts/partials/artists.html
+++ b/themes/moderntattoo/layouts/partials/artists.html
@@ -27,19 +27,19 @@
         <div class="row social-links">
             <div class="col-sm-12 col-md-8 offset-sm-0">
                 {{ if $artist.Website }}
-                <a href="{{ .Website }}" target="_self"><div><i class="fas fa-link"></i></div></a>
+                <a href="{{ .Website }}" target="_blank"><div><i class="fas fa-link"></i></div></a>
                 {{ end }}
                 {{ if $artist.Instagram }}
-                <a href="{{ .Instagram }}" target="_self"><div><i class="fab fa-instagram"></i></div></a>
+                <a href="{{ .Instagram }}" target="_blank"><div><i class="fab fa-instagram"></i></div></a>
                 {{ end }}
                 {{ if $artist.Twitter }}
-                <a href="{{ .Twitter }}" target="_self"><div><i class="fab fa-twitter"></i></div></a>
+                <a href="{{ .Twitter }}" target="_blank"><div><i class="fab fa-twitter"></i></div></a>
                 {{ end }}
                 {{ if $artist.Facebook }}
-                <a href="{{ .Facebook }}" target="_self"><div><i class="fab fa-facebook-f"></i></div></a>
+                <a href="{{ .Facebook }}" target="_blank"><div><i class="fab fa-facebook-f"></i></div></a>
                 {{ end }}
                 {{ if $artist.Youtube }}
-                <a href="{{ .Youtube }}" target="_self"><div><i class="fab fa-youtube"></i></div></a>
+                <a href="{{ .Youtube }}" target="_blank"><div><i class="fab fa-youtube"></i></div></a>
                 {{ end }}
             </div>
         </div>
