--- a/themes/moderntattoo/assets/sass/contact.scss
+++ b/themes/moderntattoo/assets/sass/contact.scss
@@ -14,9 +14,10 @@
         .day, .hour { justify-content: space-between } 
     }
 
+    p, a { padding: 5px 15px; }
+
     .location {
         flex-direction: column;
-        .address { padding: 5px 15px; }
         iframe.map { 
             width: 100%; 
             height: 300px; 
