--- a/themes/moderntattoo/layouts/partials/contact.html
+++ b/themes/moderntattoo/layouts/partials/contact.html
@@ -8,6 +8,8 @@
     <div class="row">
         <div class="col-sm-6 offset-sm-0 col-lg-4 offset-lg-2">
             <div class="row">
+                <div class="col-sm-12"><h5> Phone </h5></div>
+                <div class="col-sm-12"><a href="tel:6167419009">(616) 741-9009</a></div>
                 <div class="col-sm-12"><h5> Hours </h5></div>
                 <div class="hours col-sm-12">
                     {{ range .Schedule }}
