Added social links

--- a/themes/moderntattoo/assets/sass/nav.scss
+++ b/themes/moderntattoo/assets/sass/nav.scss
@@ -29,6 +29,13 @@
     }
 
     #navSupport {
+        justify-content: space-between;
+        .social-nav {
+            li a {
+                font-size: 1.5rem;
+            }
+        }
+
         li a {
             color: #666;
             transition: color .3s;
