--- a/themes/moderntattoo/layouts/partials/nav.html
+++ b/themes/moderntattoo/layouts/partials/nav.html
@@ -30,6 +30,14 @@
                 <a class="nav-link" href="#faq_anchor">FAQ</a>
             </li>
         </ul>
+        <ul class="social-nav navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="https://www.facebook.com/behindthesceneztattooz/?ref=br_rs" target="_blank"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://www.instagram.com/btstattooz/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
+            </li>
+        </ul>
     </div>
 </nav>
 <script>
