--- a/themes/moderntattoo/assets/sass/nav.scss
+++ b/themes/moderntattoo/assets/sass/nav.scss
@@ -33,7 +33,10 @@
         .social-nav {
             li a {
                 font-size: 1.5rem;
+                margin: 0 15px;
             }
+
+            flex-direction: row !important;
         }
 
         li a {
